@@ -1,5 +1,6 @@
 UNRELEASED CHANGES:
 
+* Add ability to sort tasks by completed_at attribute in the API
 * Redirect to registration page if there is no account
 * Improve heroku integration
 * Add bullet points to lists in call log
@@ -140,7 +141,7 @@ v1.0.0 - 2017-11-09
 * Add a button to `Save and add another contact` straight from the Add contact screen
 * Add the ability to indicate how you've met someone
 * Replace former front-end build system by mix (which is the new default with Laravel 5.5)
-* Add a first part of the API
+* Add the first part of the API
 * Fix the access to upgrade account view
 * Add security.txt file
 * Upgrade codebase to Laravel 5.5
